unpackaged/main/default/objects/Inventario__c/Inventario__c.object-meta.xml
<CustomObject>
    <description>Registros de inventario por UMU, tipo de insumo y clasificación.</description>
    <label>Inventario</label>
    <nameField>
        <displayFormat>INV-{0000000}</displayFormat>
        <label>Inventario</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventarios</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>