unpackaged/main/default/objects/Inventario__c/fields/Clasificacion__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion__c</fullName>
    <label>Clasificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medicamento</fullName>
            </value>
            <value>
                <fullName>Material de Curación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>