unpackaged/main/default/objects/Inventario__c/fields/Clave_Presupuestal__c.field-meta.xml
<CustomField>
    <fullName>Clave_Presupuestal__c</fullName>
    <description>Clave Presupuestal almacenada en objeto Cuenta.</description>
    <formula>UMU__r.Clave_Presupuestal__c</formula>
    <label>Clave Presupuestal</label>
    <type>Text</type>
</CustomField>