unpackaged/main/default/objects/Inventario__c/fields/Codigo_UMU__c.field-meta.xml
<CustomField>
    <fullName>Codigo_UMU__c</fullName>
    <description>Código de identificación de la Unidad Médica.</description>
    <formula>UMU__r.UMU__c</formula>
    <label>Código UMU</label>
    <type>Text</type>
</CustomField>