unpackaged/main/default/objects/Inventario__c/fields/Conteo_Total_Actual__c.field-meta.xml
<CustomField>
    <fullName>Conteo_Total_Actual__c</fullName>
    <description>Conteo total de piezas por inventario. Campo utilizado en la creación de PDFs.</description>
    <label>Conteo Total Actual</label>
    <summarizedField>Clave_de_Inventario__c.Conteo_Actual_Total__c</summarizedField>
    <summaryForeignKey>Clave_de_Inventario__c.Inventario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>