unpackaged/main/default/objects/Inventario__c/fields/Conteo_Total_Lotes__c.field-meta.xml
<CustomField>
    <fullName>Conteo_Total_Lotes__c</fullName>
    <description>Conteo total de lotes por inventario. Campo utilizado en la creación de PDFs.</description>
    <label>Conteo Total Lotes</label>
    <summarizedField>Clave_de_Inventario__c.Numero_Total_de_Lotes__c</summarizedField>
    <summaryForeignKey>Clave_de_Inventario__c.Inventario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>