unpackaged/main/default/objects/Inventario__c/fields/Delegaci_n__c.field-meta.xml
<CustomField>
    <fullName>Delegaci_n__c</fullName>
    <description>Delegación de la UMU relacionada. Utilizado para mostrar su valor en InventarioPDF</description>
    <formula>UMU__r.Delegacion__c</formula>
    <label>Delegación</label>
    <type>Text</type>
</CustomField>