unpackaged/main/default/objects/Inventario__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <description>Estatus del inventario.</description>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registrado</fullName>
            </value>
            <value>
                <fullName>En Firma</fullName>
            </value>
            <value>
                <fullName>Firmado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>