unpackaged/main/default/objects/Inventario__c/fields/Fecha_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio__c</fullName>
    <description>Fecha en que inicia el conteo de claves de inventario.</description>
    <label>Fecha Inicio</label>
    <type>Date</type>
</CustomField>