unpackaged/main/default/objects/Inventario__c/fields/Fecha_Registrado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Registrado__c</fullName>
    <description>Fecha y hora en que se registró el conteo de inventario por el ANS.</description>
    <label>Fecha Registrado</label>
    <type>DateTime</type>
</CustomField>