unpackaged/main/default/objects/Inventario__c/fields/Firmado_Por__c.field-meta.xml
<CustomField>
    <fullName>Firmado_Por__c</fullName>
    <description>Nombre del usuario que firma el inventario. Se llena en automático mediante el trigger cuando el usuario cambia el estatus a Firmado.</description>
    <label>Firmado Por</label>
    <length>200</length>
    <type>Text</type>
</CustomField>