unpackaged/main/default/objects/Inventario__c/fields/Nombre_UMU__c.field-meta.xml
<CustomField>
    <fullName>Nombre_UMU__c</fullName>
    <description>Campo de ayuda para usar en la Plantilla de Email: Inventario En Firma.</description>
    <formula>UMU__r.Name</formula>
    <label>Nombre UMU</label>
    <type>Text</type>
</CustomField>