unpackaged/main/default/objects/Inventario__c/fields/Numero_de_Insumos__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Insumos__c</fullName>
    <description>Numero total de claves de inventario.</description>
    <label>Numero de Insumos</label>
    <summaryForeignKey>Clave_de_Inventario__c.Inventario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>