unpackaged/main/default/objects/Inventario__c/fields/Registrado_Por__c.field-meta.xml
<CustomField>
    <fullName>Registrado_Por__c</fullName>
    <description>Nombre del usuario que registra el inventario. Se llena en automático mediante el trigger cuando el usuario cambia el estatus a En Firma.</description>
    <label>Registrado Por</label>
    <length>200</length>
    <type>Text</type>
</CustomField>