unpackaged/main/default/objects/Inventario__c/fields/Registrado_Por_Email__c.field-meta.xml
<CustomField>
    <fullName>Registrado_Por_Email__c</fullName>
    <description>Email del usuario que pone el inventario En Firma. (ANS). Se utiliza para el envío de la notificación.</description>
    <label>Registrado Por Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>