unpackaged/main/default/objects/Inventario__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <description>Día en que fue firmado el registro del inventario por el jefe de almacén.</description>
    <label>Fecha De Firma</label>
    <type>DateTime</type>
</CustomField>