unpackaged/main/default/objects/Inventario__c/fields/Tipo_de_Insumo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Insumo__c</fullName>
    <label>Tipo de Insumo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordinario</fullName>
            </value>
            <value>
                <fullName>Programa</fullName>
            </value>
            <value>
                <fullName>Vacunas</fullName>
            </value>
            <value>
                <fullName>Compra Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>