unpackaged/main/default/objects/Inventario__c/fields/UMU__c.field-meta.xml
<CustomField>
    <fullName>UMU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>UMU en la cual se realiza el registro de inventario.</description>
    <label>UMU</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventarios</relationshipLabel>
    <relationshipName>Inventarios</relationshipName>
    <type>Lookup</type>
</CustomField>