unpackaged/main/default/objects/Inventario__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nombre_UMU__c</columns>
    <columns>Clasificacion__c</columns>
    <columns>Tipo_de_Insumo__c</columns>
    <columns>Estatus__c</columns>
    <columns>Codigo_UMU__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>